# taxometr

./: .gitignore  README.md  pyproject.toml
config/: taxometr.json
src/taxometr/: configure.py
src/taxometr/cli/commands/: __init__.py  action_controller.py  task_controller.py
src/taxometr/dao/: task.py
src/taxometr/dao/database/: __init__.py  configure.py  task.py  time_range.py
taxometr/: configure.py
taxometr/cli/: __init__.py  __main__.py  printing.py
taxometr/dao/: __init__.py  action.py  configure.py  factory.py
taxometr/dao/database/: __init__.py  action.py  configure.py
