[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project]
name = "taxometr"
version = '0.0.1.1'
dependencies = [
    "peewee~=3.17",
    "pydantic~=2.9"
]


[project.optional-dependencies]
cli = ["click", "tabulate"]

[tool.setuptools.packages.find]
where = ['taxometr']


[project.scripts]
taxometr = "taxometr.cli:cli"
